made major changes